--- a/css/main.scss
+++ b/css/main.scss
@@ -23,6 +23,6 @@ body {
   background-color: #FEFDFD;
   display: flex;
   @media (orientation: landscape) {
-    background-color: red;
+    background-color: rgb(186, 250, 255);
   }
 }
