--- a/css/main.scss
+++ b/css/main.scss
@@ -28,7 +28,8 @@ html {
 body {
   background-color: #FEFDFD;
   display: flex;
-  @media (orientation: landscape) {
+  @media (orientation: portrait) {
     background-color: rgb(186, 250, 255);
+    flex-direction: column;
   }
 }
