--- a/css/components/_current-day.scss
+++ b/css/components/_current-day.scss
@@ -3,29 +3,65 @@
   text-align: center;
   background-color: var(--primary-color);
   color: var(--color);
-  width: 25%;
+  min-width: 22%;
   display: flex;
   flex-direction: column;
   height: 100vh;
+  font-size: calc(1vh + 1.5rem);
+
+  @media (orientation: portrait) {
+    height: initial;
+    width: 100vw;
+    height: 12vh;
+    justify-content: center;
+    align-items: center;
+  }
   &__title {
     color: var(--off-color);
-    font-size: calc(1vh + 2rem);
+    font-size: 1em;
     padding: 10vh 0 2vh;
     border-bottom: 1px solid var(--off-color);
     margin-bottom: 3vh;
     font-weight: 400;
+    @media (orientation: portrait) {
+      display: none;
+    }
   }
-  &__subtitle {
-    font-size: calc(1vh + 2.6rem);
-    padding: 0 0 3vh;
-    font-weight: 300;
+
+  & &__btn {
+    @media (orientation: portrait) {
+      display: none;
+    }
   }
-  &__day-info {
-    font-size: calc(1vh + 2.7rem);
-    padding: 0 0 2vh;
-    font-weight: 600;
-  }
+
   &__heading {
     padding: 3vh 0 3vh;
+    @media (orientation: portrait) {
+      padding: 0;
+      font-size: .8em;
+      display: flex;
+      min-width: 50vw;
+      justify-content: space-evenly;
+      flex-wrap: wrap;
+    }
   }
+
+  &__subtitle {
+    font-size: 1.2em;
+    padding: 0 0 3vh;
+    font-weight: 300;
+    @media (orientation: portrait) {
+      font-size: 1em;
+      padding: 0;
+      flex-basis: 100%;
+      height: 20px;
+    }
+  }
+
+  &__day-info {
+    font-size: 1.3em;
+    /*padding: 0 0 2vh;*/
+    font-weight: 600;
+  }
+
 }
