--- a/css/main.css
+++ b/css/main.css
@@ -15,19 +15,24 @@
   align-items: center;
   font-size: calc(1vh + 1rem);
   cursor: default;
+  overflow: hidden;
 }
 .calendar__wrapper {
   scroll-behavior: smooth;
   overflow-y: hidden;
-  width: 90%;
-  min-width: 365px;
+  width: 95%;
+  /*min-width: 365px;*/
   display: flex;
   flex-direction: column;
-  height: 82vh;
-  max-height: 82vh;
+  height: 90vh;
   padding: 1px;
   background-color: var(--primary-color);
   box-shadow: 3px 2px 15px rgba(0, 0, 0, 0.15);
+}
+@media (orientation: portrait) {
+  .calendar__wrapper {
+    height: 70vh;
+  }
 }
 .calendar__title {
   color: var(--primary-color);
@@ -36,6 +41,11 @@
   height: 8vh;
   display: flex;
   align-items: center;
+}
+@media (orientation: landscape) {
+  .calendar__title {
+    display: none;
+  }
 }
 .calendar__navigation {
   display: flex;
@@ -71,7 +81,7 @@
   width: 100%;
   display: grid;
   /*grid-template-columns: repeat(auto-fill, minmax(45px, 1fr));*/
-  grid-template-columns: repeat(7, minmax(80px, 1fr));
+  grid-template-columns: repeat(7, minmax(45px, 1fr));
   grid-template-rows: 4vh;
   background-color: var(--primary-color);
   grid-gap: 1px;
@@ -165,37 +175,80 @@
   height: 10vh;
   align-items: center;
 }
+@media (orientation: landscape) {
+  .calendar .calendar__button {
+    display: none;
+  }
+}
 
 .current-day {
   cursor: default;
   text-align: center;
   background-color: var(--primary-color);
   color: var(--color);
-  width: 25%;
+  min-width: 22%;
   display: flex;
   flex-direction: column;
   height: 100vh;
+  font-size: calc(1vh + 1.5rem);
+}
+@media (orientation: portrait) {
+  .current-day {
+    height: initial;
+    width: 100vw;
+    height: 12vh;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .current-day__title {
   color: var(--off-color);
-  font-size: calc(1vh + 2rem);
+  font-size: 1em;
   padding: 10vh 0 2vh;
   border-bottom: 1px solid var(--off-color);
   margin-bottom: 3vh;
   font-weight: 400;
 }
-.current-day__subtitle {
-  font-size: calc(1vh + 2.6rem);
-  padding: 0 0 3vh;
-  font-weight: 300;
+@media (orientation: portrait) {
+  .current-day__title {
+    display: none;
+  }
 }
-.current-day__day-info {
-  font-size: calc(1vh + 2.7rem);
-  padding: 0 0 2vh;
-  font-weight: 600;
+@media (orientation: portrait) {
+  .current-day .current-day__btn {
+    display: none;
+  }
 }
 .current-day__heading {
   padding: 3vh 0 3vh;
+}
+@media (orientation: portrait) {
+  .current-day__heading {
+    padding: 0;
+    font-size: 0.8em;
+    display: flex;
+    min-width: 50vw;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+}
+.current-day__subtitle {
+  font-size: 1.2em;
+  padding: 0 0 3vh;
+  font-weight: 300;
+}
+@media (orientation: portrait) {
+  .current-day__subtitle {
+    font-size: 1em;
+    padding: 0;
+    flex-basis: 100%;
+    height: 20px;
+  }
+}
+.current-day__day-info {
+  font-size: 1.3em;
+  /*padding: 0 0 2vh;*/
+  font-weight: 600;
 }
 
 .btn {
@@ -262,7 +315,7 @@
   align-items: center;
   position: relative;
   background-color: #fefdfd;
-  padding: 4vw 6vw;
+  padding: 3vw 4vw;
   border-radius: 10px;
 }
 .dialog .btn {
@@ -284,6 +337,7 @@
   display: grid;
   width: 100%;
   grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(2, minmax(55px, 1fr));
   justify-content: center;
   -moz-column-gap: 2vh;
        column-gap: 2vh;
@@ -292,6 +346,7 @@
 @media (orientation: portrait) {
   .color-chooser__color-options {
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, minmax(55px, 1fr));
   }
 }
 .color-chooser__color-option {
@@ -299,6 +354,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 .color-chooser__color-option--blue .color-chooser__color-preview {
   background-color: #1B19CD;
@@ -342,13 +398,19 @@
   height: 2vh;
 }
 .color-chooser__color-preview {
-  width: 5.5vw;
-  height: 5.5vw;
+  width: 5vw;
+  height: 5vw;
   border-radius: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
+}
+@media (orientation: portrait) {
+  .color-chooser__color-preview {
+    width: 10vw;
+    height: 10vw;
+  }
 }
 .color-chooser__color-preview:hover {
   opacity: 0.8;
@@ -366,19 +428,24 @@
   font-size: calc(2.2rem + 1.6vw);
 }
 .note-editor h3 {
-  margin: 0 0 2rem;
+  margin: 0 0 1rem;
   font-size: 1em;
   font-weight: 300;
   /*border-bottom: 1px solid #222;*/
   padding: 0 2rem 2vw;
   text-align: center;
 }
+@media (orientation: landscape) {
+  .note-editor h3 {
+    padding-bottom: 0;
+  }
+}
 .note-editor__textarea {
   font-weight: 600;
   color: var(--black);
   font-size: 0.7em;
   width: 100%;
-  height: 25vh;
+  height: 30vh;
   border: 1px solid #a7a6a6;
   padding: 2rem;
   border-radius: 10px;
@@ -387,6 +454,9 @@
 }
 .note-editor__buttons {
   display: flex;
+}
+.note-editor__buttons .btn {
+  margin-top: 1rem;
 }
 
 html {
@@ -405,8 +475,9 @@ body {
   background-color: #FEFDFD;
   display: flex;
 }
-@media (orientation: landscape) {
+@media (orientation: portrait) {
   body {
     background-color: #bafaff;
+    flex-direction: column;
   }
 }/*# sourceMappingURL=main.css.map */
