added webpack for js processing/generation; added edge dev tools launch json for js development

--- a/css/main.css
+++ b/css/main.css
@@ -477,7 +477,7 @@ body {
 }
 @media (orientation: portrait) {
   body {
-    background-color: #bafaff;
+    /*background-color: rgb(186, 250, 255);*/
     flex-direction: column;
   }
 }/*# sourceMappingURL=main.css.map */
