--- a/css/components/_calendar.scss
+++ b/css/components/_calendar.scss
@@ -45,6 +45,7 @@
 
   &__month {
     padding: 0 3rem;
+    min-width: 25vw;
   }
 
   &__prev-month, &__next-month {
@@ -146,12 +147,13 @@
     }*/
 
     &--off {
+      pointer-events: none;
       background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='20' height='20' patternTransform='scale(.35) rotate(45)'><rect x='0' y='0' width='100%' height='100%' fill='rgba(248,248,248,1)'/><path d='M 10,-2.55e-7 V 20 Z M -1.1677362e-8,10 H 20 Z'  stroke-width='8' stroke='rgba(255,255,255,1)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(-45,-45)' fill='url(%23a)'/></svg>")
     }
 
     &--selected {
-      grid-column: span 2;
-      grid-row: span 2;
+      grid-column: span 2 / auto;
+      grid-row: span 2 / auto;
     }
 
     &--active {
@@ -185,6 +187,7 @@
     text-align: left;
     width: 100%;
     transition: all .35s ease;
+    pointer-events: none;
   }
 
   & &__button {
