--- a/css/components/_current-day.scss
+++ b/css/components/_current-day.scss
@@ -9,6 +9,10 @@
   height: 100vh;
   font-size: calc(1vh + 1.5rem);
 
+  sup {
+    font-size: .5em;
+  }
+
   @media (orientation: portrait) {
     height: initial;
     width: 100vw;
@@ -16,6 +20,7 @@
     justify-content: center;
     align-items: center;
   }
+
   &__title {
     color: var(--off-color);
     font-size: 1em;
@@ -52,7 +57,7 @@
     font-weight: 300;
     @media (orientation: portrait) {
       font-size: 1em;
-      padding: 0;
+      padding: 0 0 2.5rem 0;
       flex-basis: 100%;
       height: 20px;
     }
