--- a/css/components/_dialog.scss
+++ b/css/components/_dialog.scss
@@ -10,6 +10,7 @@
   &:not([open]) {
     display: none;
   }
+
   &__popup {
     display: flex;
     flex-direction: column;
@@ -19,8 +20,84 @@
     background-color: #fefdfd;
     padding: 3vw 4vw;
     border-radius: 10px;
+    opacity: 0;
+    /*transform: scale(.5);
+     transition: all .35s ease-out;
+    opacity: 0;*/
   }
+
+  &__popup--open {
+    animation-name: popup-fadein;
+    animation-duration: .35s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+  }
+
+  &__popup--close {
+    animation-name: popup-fadeout;
+    animation-duration: .35s;
+    animation-timing-function: ease-out;
+  }
+
+  /*&__popup--open {
+    transform: scale(1);
+    opacity: 1;
+  }*/
+
+  @keyframes popup-fadeout {
+    0% {
+      opacity: 1;
+      transform: scale(1);
+    }
+    100% {
+      opacity: 0;
+      transform: scale(.5);
+    }
+  }
+
+  @keyframes popup-fadein {
+    0% {
+      opacity: 0;
+      transform: scale(.5);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+
   .btn {
     margin: 5vw auto 1vw;
   }
+
+  &--fade-in {
+    animation-name: fade-in;
+    animation-duration: .5s;
+    animation-timing-function: ease-out;
+  }
+
+  &--fade-out {
+    animation-name: fade-out;
+    animation-duration: .5s;
+    animation-timing-function: ease-out;
+  }
+
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @keyframes fade-out {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+
 }
