corrected interface problems with modal animations events; color-chooser sets default blue color

--- a/css/components/_calendar.scss
+++ b/css/components/_calendar.scss
@@ -101,13 +101,22 @@
     cursor: pointer;
 
     &--has-tooltip {
-      &:hover {
-        cursor: help;
-        span {
-          display: block;
+
+      > * {
+        pointer-events: none;
+      }
+
+      @media (orientation: landscape) {
+        &:hover {
+          cursor: help;
+
+          span {
+            display: block;
+          }
 
         }
       }
+
       span {
         display: none;
         white-space: pre-wrap;
