--- a/css/components/_note-editor.scss
+++ b/css/components/_note-editor.scss
@@ -1,33 +1,35 @@
 .note-editor {
-  font-size: calc(2.2rem + 1.6vw);
-  h3 {
-    margin: 0 0 1rem;
-    font-size: 1em;
-    font-weight: 300;
-    /*border-bottom: 1px solid #222;*/
-    padding: 0 2rem 2vw;
-    text-align: center;
-    @media (orientation: landscape) {
-      padding-bottom: 0;
+  // only affects note-editor components child of dialog container
+  .dialog & {
+    font-size: calc(2.2rem + 1.6vw);
+    h3 {
+      margin: 2rem 0 1rem;
+      font-size: 1em;
+      font-weight: 300;
+      /*border-bottom: 1px solid #222;*/
+      padding: 0 2rem 2vw;
+      text-align: center;
+      @media (orientation: landscape) {
+        padding-bottom: 0;
+      }
+    }
+    &__textarea {
+      font-weight: 600;
+      color: var(--black);
+      font-size: .7em;
+      width: 100%;
+      height: 30vh;
+      border: 1px solid #a7a6a6;
+      padding: 2rem;
+      border-radius: 10px;
+      outline: none;
+      resize: none;
+    }
+    &__buttons {
+      display: flex;
+      .btn {
+        margin-top: 1rem;
+      }
     }
   }
-  &__textarea {
-    font-weight: 600;
-    color: var(--black);
-    font-size: .7em;
-    width: 100%;
-    height: 30vh;
-    border: 1px solid #a7a6a6;
-    padding: 2rem;
-    border-radius: 10px;
-    outline: none;
-    resize: none;
-  }
-  &__buttons {
-    display: flex;
-    .btn {
-      margin-top: 1rem;
-    }
-  }
-
 }
