Hide body until color-chooser gets color from server; added axios timeout to load color; added post request to update/create note in note-editor module; hide php warnings; added server function to update note; started server function to delete note

--- a/css/main.css
+++ b/css/main.css
@@ -617,8 +617,8 @@ html {
 }
 
 body {
+  display: none;
   background-color: #FEFDFD;
-  display: flex;
 }
 @media (orientation: portrait) {
   body {
