--- a/css/main.scss
+++ b/css/main.scss
@@ -26,8 +26,8 @@ html {
 }
 
 body {
+  display: none;
   background-color: #FEFDFD;
-  display: flex;
   @media (orientation: portrait) {
     /*background-color: rgb(186, 250, 255);*/
     flex-direction: column;
